[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "container-hardening-agent"
version = "0.1.0"
description = "CLI-first scaffold for a container hardening agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0,<2.0",
    "langgraph-checkpoint-sqlite>=3.0.1,<4.0",
    "lxml>=5.3,<7",
    "openpyxl>=3.1.0",
    "packaging>=24",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "semantic-version>=2.10",
    "tomlkit>=0.13",
    "tree-sitter>=0.26,<0.27",
    "tree-sitter-java>=0.23.5,<0.24",
    "tree-sitter-javascript>=0.25,<0.26",
    "tree-sitter-typescript>=0.23.2,<0.24",
    "typer>=0.12.0",
]

[project.optional-dependencies]
bedrock = [
    "boto3>=1.35",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
harden = "harden.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
